cmake_minimum_required(VERSION 3.10)
project(CGTeaWeb)
set(CMAKE_CXX_STANDARD 17)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(Boost REQUIRED COMPONENTS unit_test_framework)
include_directories(${Boost_INCLUDE_DIRS})
file(GLOB Reports "reports/*.cpp")
file(GLOB Generators "generators/*.cpp")
file(GLOB Actions "actions/*.cpp")
file(GLOB ConjectureCheck "ConjectureCheck/*.cpp")
#set( CMAKE_CXX_FLAGS "`wx-config --cxxflags --libs`")
add_executable(CGTeaWeb test.cpp  ${Reports} ${Generators} ${Actions})
#add_executable(BoostTest ${Reports} ${Generators}  ${BoostTestSrc} ${ConjectureCheck} ${Actions})
target_link_libraries(CGTeaWeb ${Boost_LIBRARIES} Threads::Threads)
#target_link_libraries(CGTeaWeb PRIVATE )
#target_link_libraries(BoostTest ${Boost_LIBRARIES})
